--- a/src/test/resources/examples/anyOfOneOfAllOf/api.yaml
+++ b/src/test/resources/examples/anyOfOneOfAllOf/api.yaml
@@ -198,3 +198,25 @@ components:
               type: string
           required:
             - outfit_id
+
+    BatchAddItemResponse:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            required:
+              - id
+              - status_code
+            allOf:
+              - $ref: '#/components/schemas/ItemId'
+              - type: object
+                properties:
+                  status_code:
+                    type: integer
+    ItemId:
+      type: object
+      properties:
+        id:
+          type: string
+      description: Contains a wardrobe item id.
