--- a/src/test/resources/examples/anyOfOneOfAllOf/api.yaml
+++ b/src/test/resources/examples/anyOfOneOfAllOf/api.yaml
@@ -22,3 +22,22 @@ components:
         id:
           type: string
       description: Contains a wardrobe item id.
+
+    BatchAddItemResponseNonInlined:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/RefAllOf'
+
+    RefAllOf:
+      required:
+        - id
+        - status_code
+      allOf:
+        - $ref: '#/components/schemas/ItemId'
+        - type: object
+          properties:
+            status_code:
+              type: integer
